Пофиксил ошибку с github oauth2 за 40 минут на стриме поправил маршруты и сделал fix BD

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -9,4 +9,4 @@ RUN mkdir -p /var/log/app
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-CMD ["python", "backend/app_prod.py"]
+CMD ["python", "backend/app.py"]
