--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -29,7 +29,7 @@ services:
   postgres_exporter:
     image: prometheuscommunity/postgres-exporter
     environment:
-      DATA_SOURCE_NAME: "postgresql://postgres:postgres@db:5432/postgres?sslmode=disable"
+      DATA_SOURCE_NAME: "postgresql://prod_user:prod_password@db:5432/prod_db?sslmode=disable"
     ports:
       - 9187:9187
     depends_on:
