Пофиксил ошибку с github oauth2 за 40 минут на стриме поправил маршруты и сделал fix BD

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,11 +1,10 @@
 FROM python:3.12.9
 
-COPY . /app
-
 WORKDIR /app
 
-# Создаем директорию для логов
-RUN mkdir -p /var/log/app
+COPY . .
+
+COPY backend/requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
