--- a/grafana/provisioning/datasources/datasources.yaml
+++ b/grafana/provisioning/datasources/datasources.yaml
@@ -4,7 +4,7 @@ datasources:
   - name: Loki
     type: loki
     access: proxy
-    url: http://loki:3100
+    url: http://192.168.1.86:3100
     uid: loki-uid
     isDefault: false
     version: 1
@@ -15,7 +15,7 @@ datasources:
   - name: Prometheus
     type: prometheus
     access: proxy
-    url: http://prometheus:9090
+    url: http://192.168.1.86:9090
     uid: prometheus-uid
     isDefault: true
     version: 1
