--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -2,10 +2,12 @@ FROM python:3.12.9
 
 WORKDIR /app
 
-COPY . .
+# Копируем файлы requirements.txt
+COPY backend/requirements.txt /app/requirements.txt
 
-COPY backend/requirements.txt .
-
+# Устанавливаем зависимости Python
 RUN pip install --no-cache-dir -r requirements.txt
+
+COPY . .
 
 CMD ["python", "backend/app.py"]
